# calorie_tracker_mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: auth-flow-diagram.html
live_coding/: config.py  host.py  server.py
src/calorie_tracker/: __init__.py  auth.py  config.py  host.py  oauth_proxy.py  server.py  storage.py
